# algotutor-backend

./: .gitignore  Dockerfile  README.md  postman_collection.json  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  code.py  questions.py  submissions.py
app/core/: config.py  database.py
app/middleware/: auth_middleware.py  cors.py  dev_auth.py  error_handler.py  logging.py  mock_auth.py  rate_limit.py  security.py
app/models/: __init__.py  code_submission.py  question.py  solution.py  test_result.py  user.py
app/schemas/: auth.py  code.py  question.py  test_case.py
app/scripts/: migrate_questions.py
app/services/: auth_service.py  code_service.py
app/tests/: conftest.py
app/tests/test_api/: ktest_auth.py  test_auth.py  test_code.py  test_questions.py
app/tests/test_services/: test_code_service.py
scripts/: seed_questions.py
tests/: test_code_execution.py
